--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -78,7 +78,7 @@ section h3 {
   margin-top: 10px;
   padding-left: 30px;
   list-style-type: disc;
-  color: #555;
+  color: #0066cc; /* Blue font color for participants */
 }
 
 .activity-card ul li {
